# PLAN_TOJSON_TOWORKTREE_ANDBACK

./: LICENSE  Parallelized Implementation Plan 4 Independent Workstreams.txt  README.md  __init__.py  pyproject.toml
AUTO_VERSIONING_MOD/: 2025-11-03-command-messageinit-is-analyzing-your-codebase.txt  CLAUDE.md  ID Module_Development & Impleme.txt  ID artifacts are versioned as first-class files in Git.txt  ID_ Two identifiers per artifact.txt  ID_Front-matter schema with stable IDs.txt  Plugin profiles.txt
AUTO_VERSIONING_MOD_!/core/: __init__.py
AUTO_VERSIONING_MOD_!/features/: deprecate_document.feature  environment.py  merge_documents.feature
AUTO_VERSIONING_MOD_!/ids/: registry.yaml
AUTO_VERSIONING_MOD_!/schemas/: ledger_event.schema.json  registry.schema.json
AUTO_VERSIONING_MOD_!/scripts/: id_cli.py
AUTO_VERSIONING_MOD_!/tests/: conftest.py
core/: contracts.py  runner.py  validation.py
core/models/: id_card.py  ledger_event.py
core/plugins/: __init__.py
features/: rename_document.feature
features/steps/: merge_steps.py  rename_steps.py
planning solutions/: InvokeBuild Git Worktrees for Parallel AI Development.txt  LLM-orchestrated planning system.txt  Validates and applies a unified diff patch file using Git.txt  hierarchical planning structure.txt  planning solutions.txt
plugins/sample_recommender/: plugin.py
schemas/: front_matter_extended.schema.json  id_card.schema.json  plan.schema.json  recommendation.schema.json
scripts/: __init__.py  migrate_to_id_module.py
tests/e2e/: test_pipeline_e2e.py
tests/id_module/: test_mint.py  (+1 more)
(+23 files in other folders)
